# dft.p

./: Cargo.toml  README.md  README.txt
src/: bin.rs  lib.rs  types.rs
src/combinators/: contexts.rs  mod.rs  types.rs
src/lib/: lib.rs  types.rs
src/lib/combinators/: literals.rs  mod.rs  types.rs
src/lib/implementations/: from.rs  from_str.rs
tests/: combinators.rs  parser.rs
